--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "homepage": "https://github.com/Mindo-Joseph/restaurant-page#readme",
   "dependencies": {
     "eslint": "^7.8.1"
+  },
+  "devDependencies": {
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   }
 }
